Fix Render deployment: Add npx to build command, optimize Vite config, and add custom build script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "homepage": "https://maruthi-velaga.github.io/mahostav",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npx vite build",
+    "build:prod": "NODE_ENV=production npx vite build",
     "typecheck": "tsc -b",
     "lint": "eslint .",
     "preview": "vite preview",
