--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "homepage": "https://maruthi-velaga.github.io/mahostav",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build --mode production",
-    "build:clean": "rm -rf dist && npm run build",
+    "build": "node ./node_modules/vite/bin/vite.js build",
+    "build:alt": "node node_modules/.bin/vite build",
     "typecheck": "tsc -b",
     "lint": "eslint .",
     "preview": "vite preview",
